# LED-Cube

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  WebSocket.md  build.bat  ledcube.service
CAO/: LEDC_assemblage.f3z  LEDC_baguettes_plexi_border2 v8.f3d  LEDC_baguettes_plexi_corner.f3d  LEDC_baguettes_plexi_top2 v3.f3d  Pied_LEDcube.f3d  base_plexi_ledcube v2.f3d  support_cartes_tlc v2.f3d
PCBs/Led_Driver_Board/: 1-PCB_PCB_2.0.json  1-Schematic_LedCube.json
PCBs/Routing_board/: 1-PCB_PCB_LedCube_routing2.json  1-Schematic_LedCube_routing2.json  2-PCB_PCB_LedCube_routing3.json  readme.md
WEB/: edit.php  execute.php  from_image copy.html  from_image.php  get_animation.php  index.html  index.php  login.php  logout.php  math.md  openfile.php  random.php  save.php
WEB/animation/: index.html
WEB/animations/: Dams  GPSE  GPSE.json.txt  LED3  Noel  Noel.json.txt  Polytech  Polytech chargement.json.txt  Polytech va et vient.json.txt  Polytech2  Polytech_load  Robotek apparition.json.txt  Robotek rainbow.json.txt  Robotek wave.json.txt  Robotek_anim  Robotek_rainbow  Robotek_wave  TEST  cercle chromatique carre.json.txt  cercle chromatique rond.json.txt  cercle_chromatique  cercle_chromatique2  coeur  coeur.json.txt  cube chromatique statique.json.txt  diagonale  empty  faux 1 plan long.json.txt  feux 1 plan.json.txt  feux 2 plans.json.txt  fire  fire_2plans  fire_long  flame_2plans  growCube  led  led1  led2  led4  orientation des leds.json.txt  (+15 more)
WEB/css/: Main.css  from_image.css  style.css
WEB/favicon/: site.webmanifest
WEB/functions/: function.php
WEB/jeux/: index.html
WEB/js/: Main.js  OrbitControls.js  Request.js  Viewerscript.js  from_image.js  math.js
WEB/login/: index.html  login.js
WEB/logout/: index.html  logout.js
WEB/parametres/: index.html  parametres.css  parametres.js
animations/: GPSE.ledcube  Noel.ledcube  Polytech chargement.ledcube  Polytech va et vient.ledcube  Robotek apparition.ledcube  Robotek rainbow.ledcube  Robotek wave.ledcube  cercle chromatique carre.ledcube  cercle chromatique rond.ledcube  coeur.ledcube  cube chromatique statique.ledcube  feux 1 plan long.ledcube  feux 1 plan.ledcube  feux 2 plans.ledcube  growCube.ledcube  orientation des leds.ledcube  patriote.ledcube  radar et cible.ledcube  radar.ledcube  snakube.ledcube  sphere RGB lent.ledcube  sphere RGB smooth.ledcube  sphere bleu.ledcube  stroboscope.ledcube  wave noalias 2.ledcube  wave noalias.ledcube  white.ledcube
cpp/: LEDCube.cpp  LEDCube.h  PatternThread.cpp  PatternThread.h  TLC pin map.xlsx  TLCPattern.cpp  TLCPattern.h  TLCSin.cpp  TLCSin.h  Thread.cpp  Thread.h  aleatoire.sh  ledcube.cpp  main.cpp  makefile
cpp/include/: bcrypt.h  unistd-compat.cpp  unistd-compat.h  unistd-windows.h  wiringPi.h
cpp/ledcube/: Animation.cpp  Animation.h  Frame.cpp  Frame.h  LEDCube.cpp  LEDCube.h  LEDCubeConst.h  LEDCubeManager.cpp  LEDCubeManager.h  Sender.cpp  Sender.h  TLCSin.cpp  TLCSin.h
cpp/ledcube-windows/: README.md  ledcube-windows.cpp
cpp/ledcube_19.03.2021_pigpio/: README.md  ledcube.cpp
cpp/no_bcm2835/: Sender-no.cpp  TLCSin-no.cpp
cpp/server/: ClientAuth.cpp  ClientAuth.h  ClientChallenge.cpp  ClientChallenge.h  ClientManager.cpp  ClientManager.h  HardwareMonitor.cpp  JsonMessage.h  (+8 more)
cpp/tests/clock/: CMakeLists.txt  clock.cpp  clock.md
(+84 files in other folders)
